# mygame

./: .setting.cfg.swp  CMakeLists.txt  README.md  main.cpp  setting.cfg
include/: .EventHandlerSDL.h.swp  .Game.h.swp  .Graphics.h.swp  .Magus.h.swp  .Object.h.swp  .Plugin.h.swp  .Room.h.swp  .SpriteSheet.h.swp  .SpritedObject.h.swp  Attributes.h  Event.h  EventEdit.h  EventHandler.h  EventHandlerSDL.h  EventKB.h  EventQuit.h  Game.h  Graphics.h  Magus.h  Monitor.h  OGL.h  Object.h  Pixel.h  Plugin.h  RTE.h  Room.h  SDLINC.h  SDLINC1_2.h  SDLINC2.h  SpriteMap.h  SpriteSheet.h  Sprited.h  SpritedObject.h  Texture.h  Timer.h
python/: AddPlugin.py
src/: .EventHandlerSDL.cpp.swp  .Game.cpp.swp  .GraphicsSDL.cpp.swp  .Magus.cpp.swp  .Object.cpp.swp  .Plugin.cpp.swp  .Room.cpp.swp  .SpriteSheet.cpp.swp  .SpritedObject.cpp.swp  Event.cpp  EventEdit.cpp  EventHandler.cpp  EventHandlerSDL.cpp  EventKB.cpp  EventQuit.cpp  Game.cpp  Game.cpp~  Graphics.cpp  GraphicsGL.cpp  GraphicsSDL.cpp  Magus.cpp  Monitor.cpp  Object.cpp  Pixel.cpp  Plugin.cpp  RTE.cpp  Room.cpp  SpriteMap.cpp  SpriteSheet.cpp  SpritedObject.cpp  Texture.cpp  Timer.cpp
template/: Plugin_cpp.tmp  Plugin_h.tmp  Root_cpp.tmp  Root_h.tmp
